--- a/css/style.css
+++ b/css/style.css
@@ -314,50 +314,67 @@ header {
     right: 0;
     top: 0;
     z-index: -1; }
-  #footer .contact-data {
+  #footer .flex-area {
     display: flex;
-    flex-direction: column;
     justify-content: space-around; }
-    #footer .contact-data .contact-icon {
-      color: white;
-      font-size: 2rem;
-      display: inline-block; }
-  #footer .footer-form {
-    background-color: rgba(32, 51, 114, 0);
-    display: inline-block;
-    padding: 1.6rem;
-    width: 40%; }
-    #footer .footer-form form .form-elem {
-      background-color: rgba(255, 255, 255, 0);
-      border: 3px solid white;
-      box-shadow: 0 0 0.2px white;
-      display: block;
-      margin-bottom: 0.5rem;
-      padding: 0.5rem;
-      width: 100%;
-      color: white; }
-    #footer .footer-form form input::placeholder, #footer .footer-form form textarea::placeholder {
-      color: white;
-      font-family: "Exo 2", sans-serif; }
-    #footer .footer-form form .form-btn {
-      background-color: rgba(255, 255, 255, 0);
-      background-image: linear-gradient(45deg, #fcfcfc 50%, transparent 50%);
-      background-position: 100% 0;
-      background-size: 300%;
-      border: 3px solid white;
-      box-shadow: 0 0 0.2px white;
-      color: white;
-      cursor: pointer;
-      display: block;
-      font-family: "Exo 2", sans-serif;
-      font-weight: 900;
-      letter-spacing: 0.1rem;
-      margin-left: auto;
-      padding: 1rem 1.5rem;
-      text-transform: uppercase;
-      transition-duration: 0.5s; }
-      #footer .footer-form form .form-btn:hover {
-        background-position: 0 100%;
-        color: rgba(50, 40, 136, 0.473); }
+    #footer .flex-area .data-container {
+      display: flex;
+      align-items: center; }
+      #footer .flex-area .data-container .contact-data {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center; }
+        #footer .flex-area .data-container .contact-data .my-name {
+          margin-bottom: 0.6rem;
+          font-size: 2em;
+          font-weight: 700; }
+        #footer .flex-area .data-container .contact-data .telephone-number {
+          font-size: 1.3em;
+          margin-bottom: 0.6rem; }
+        #footer .flex-area .data-container .contact-data .icon-container .icon-link {
+          margin: 0 1rem; }
+          #footer .flex-area .data-container .contact-data .icon-container .icon-link .contact-icon {
+            color: white;
+            font-size: 2.5rem;
+            display: inline-block; }
+    #footer .flex-area .footer-form {
+      background-color: rgba(32, 51, 114, 0);
+      display: inline-block;
+      width: 40%; }
+      #footer .flex-area .footer-form form .form-elem {
+        background-color: rgba(255, 255, 255, 0);
+        border: 3px solid white;
+        box-shadow: 0 0 0.2px white;
+        display: block;
+        margin-bottom: 0.5rem;
+        padding: 0.5rem;
+        width: 100%;
+        color: white; }
+      #footer .flex-area .footer-form form input::placeholder,
+      #footer .flex-area .footer-form form textarea::placeholder {
+        color: white;
+        font-family: "Exo 2", sans-serif; }
+      #footer .flex-area .footer-form form .form-btn {
+        background-color: rgba(255, 255, 255, 0);
+        background-image: linear-gradient(45deg, #fcfcfc 50%, transparent 50%);
+        background-position: 100% 0;
+        background-size: 300%;
+        border: 3px solid white;
+        box-shadow: 0 0 0.2px white;
+        color: white;
+        cursor: pointer;
+        display: block;
+        font-family: "Exo 2", sans-serif;
+        font-weight: 900;
+        letter-spacing: 0.1rem;
+        margin-left: auto;
+        padding: 1rem 1.5rem;
+        text-transform: uppercase;
+        transition-duration: 0.5s;
+        font-size: 1.1em; }
+        #footer .flex-area .footer-form form .form-btn:hover {
+          background-position: 0 100%;
+          color: rgba(19, 5, 109, 0.452); }
 
 /*# sourceMappingURL=style.css.map */
