--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,8 @@ header {
     header .navbar-container .logo-container {
       position: relative;
       width: auto;
-      min-width: 22rem; }
+      min-width: 22rem;
+      transition-duration: 0.3s; }
       header .navbar-container .logo-container a {
         display: block;
         height: 3.5rem;
@@ -64,11 +65,21 @@ header {
         top: calc(50% - 1.75rem);
         width: 100%;
         z-index: 1; }
-      header .navbar-container .logo-container img {
+      header .navbar-container .logo-container .big-logo {
         height: auto;
         width: 100%;
         position: absolute;
         top: -151px; }
+      header .navbar-container .logo-container .small-logo {
+        position: absolute;
+        width: 100%;
+        height: auto;
+        visibility: hidden;
+        top: -100px; }
+      header .navbar-container .logo-container .hidden {
+        visibility: hidden; }
+      header .navbar-container .logo-container .visible {
+        visibility: visible; }
     header .navbar-container nav {
       background-color: #203372;
       box-shadow: 0px 0px 10px 0px #203372;
@@ -207,6 +218,8 @@ header {
           transition-duration: .5s; }
           .sect-projects .project-container .left-side .list-left-side .cell .cell-paragraph {
             min-height: 60px; }
+          .sect-projects .project-container .left-side .list-left-side .cell .cell-icon {
+            margin-right: 0.3em; }
           .sect-projects .project-container .left-side .list-left-side .cell:hover {
             background-color: #f9fafd;
             box-shadow: 0px 0px 10px 0px #f9fafd;
@@ -292,9 +305,9 @@ header {
       width: 100%; }
 
 #footer {
-  padding: 4rem 0 8rem 0;
+  padding: 8rem 0 4rem 0;
   position: relative;
-  background-color: rgba(32, 51, 114, 0.342);
+  background-color: rgba(32, 51, 114, 0.57);
   height: 70vh; }
   #footer .title-footer {
     background-color: #203372;
@@ -303,7 +316,7 @@ header {
     font-size: 2rem;
     padding: 2rem 30px;
     position: absolute;
-    top: -4.5rem; }
+    top: -2rem; }
   #footer .footer-layer {
     background-image: url("../images/footer_cyclone.jpg");
     background-position: center;
@@ -328,16 +341,21 @@ header {
         #footer .flex-area .data-container .contact-data .my-name {
           margin-bottom: 0.6rem;
           font-size: 2em;
-          font-weight: 700; }
+          font-weight: 700;
+          color: white; }
         #footer .flex-area .data-container .contact-data .telephone-number {
           font-size: 1.3em;
-          margin-bottom: 0.6rem; }
+          margin-bottom: 0.6rem;
+          color: white; }
         #footer .flex-area .data-container .contact-data .icon-container .icon-link {
           margin: 0 1rem; }
           #footer .flex-area .data-container .contact-data .icon-container .icon-link .contact-icon {
             color: white;
             font-size: 2.5rem;
-            display: inline-block; }
+            display: inline-block;
+            transition-duration: 0.5s; }
+            #footer .flex-area .data-container .contact-data .icon-container .icon-link .contact-icon:hover {
+              color: #203372; }
     #footer .flex-area .footer-form {
       background-color: rgba(32, 51, 114, 0);
       display: inline-block;
@@ -357,7 +375,7 @@ header {
         font-family: "Exo 2", sans-serif; }
       #footer .flex-area .footer-form form .form-btn {
         background-color: rgba(255, 255, 255, 0);
-        background-image: linear-gradient(45deg, #fcfcfc 50%, transparent 50%);
+        background-image: linear-gradient(45deg, #203372 50%, transparent 50%);
         background-position: 100% 0;
         background-size: 300%;
         border: 3px solid white;
@@ -369,12 +387,11 @@ header {
         font-weight: 900;
         letter-spacing: 0.1rem;
         margin-left: auto;
-        padding: 1rem 1.5rem;
+        padding: 0.8rem 1.5rem;
         text-transform: uppercase;
         transition-duration: 0.5s;
-        font-size: 1.1em; }
+        font-size: 0.9em; }
         #footer .flex-area .footer-form form .form-btn:hover {
-          background-position: 0 100%;
-          color: rgba(19, 5, 109, 0.452); }
+          background-position: 0 100%; }
 
 /*# sourceMappingURL=style.css.map */
