--- a/sass/style.scss
+++ b/sass/style.scss
@@ -161,6 +161,7 @@ $leftPadding) {
     width: 5rem;
     z-index: 4;
     border-radius: 50%;
+    display: none;
     i {
         color: $colorOfNav;
         font-size: 4rem;
