--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,8 @@ body {
   right: 1rem;
   width: 5rem;
   z-index: 4;
-  border-radius: 50%; }
+  border-radius: 50%;
+  display: none; }
   #btnCircleUp-js i {
     color: #203372;
     font-size: 4rem;
