--- a/sass/style.scss
+++ b/sass/style.scss
@@ -22,6 +22,8 @@ body {
 }
 
 //          SASS
+//responsive navbar
+$colorOfRespNav: rgba(16, 31, 85, 0.49);
 //navbar
 $colorOfNav: rgb(16, 31, 85);
 $colorFontNav: rgb(255,
@@ -151,16 +153,14 @@ $leftPadding) {
 
 #btnCircleUp-js {
     background-color: $buttonUpBackgroundColor;
+    border-radius: 50%;
     border: none;
     bottom: 1rem;
     cursor: pointer;
-    height: 5rem;
+    display: none;
     position: fixed;
     right: 1rem;
-    width: 5rem;
     z-index: 4;
-    border-radius: 50%;
-    display: none;
     i {
         color: $buttonUpColor;
         font-size: 4rem;
@@ -174,6 +174,56 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     height: 85vh;
+    position: relative;
+    //responsive navbar
+    .responsive-navbar {
+        background-color: $colorOfRespNav;
+        width: 100%;
+        display: none;
+        flex-wrap: wrap;
+        .hamburger-container {  
+            width: 50%;  
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            .hamburger {
+                background-color: rgba(16, 31, 85, 0);
+                border: none;
+                .hamburger-icon {
+                    color: $colorOfNav;
+                    font-size: 1.8rem;
+                }
+            }
+        }
+        .hamburger-menu {
+            width: 100%;
+            .hamburger-list {
+                display: flex;
+                flex-direction: column;
+                align-items: center; 
+                list-style-type: none;
+                padding: 0;
+                margin: 0; 
+                li {
+                    margin: 0.5rem;
+                    a {
+                        color: $colorFontNav;
+                        font-size: $navFontSize;
+                        text-decoration: none;
+                    }
+                }
+            }
+        }
+        .logo-container {
+            width: 50%;
+            height: 15vh;
+            .responsive-navbar-logo {
+                width: 100%;
+                height: auto;
+            }
+        }
+    }
+
     .navbar-container {
         align-items: center;
         display: flex;
@@ -583,4 +633,51 @@ header {
             }
         }
     }
+}
+
+/* ---------------- Media Queries ----------------- */
+// Extra small devices (portrait phones, less than 576px)
+@media (max-width: 575.98px) {
+    #btnCircleUp-js {
+        i {
+            font-size: 3rem;
+        }
+    }
+    
+    header {
+        .responsive-navbar {
+            display: flex;
+        }
+        .navbar-container {
+            display: none;
+        }
+    }
+
+    .sect-about-me {
+        .title-about-me {
+            @include titleOfSection(-3.5rem);
+            padding: 1.5rem 30px;
+        }
+    }
+
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) and (max-width: 767.98px) {
+
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) and (max-width: 991.98px) {
+
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) and (max-width: 1199.98px) {
+
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+
 }
