--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,64 @@ header {
     margin-bottom: 3rem; }
   .sect-projects .header-used-technologies {
     margin: 0 0 0.5rem 0; }
+  .sect-projects .resp-project-container {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    background-image: url("../images/office.jpeg");
+    position: relative;
+    display: none;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    z-index: 0; }
+    .sect-projects .resp-project-container .resp-project-layer {
+      background-color: rgba(255, 255, 255, 0.521);
+      position: absolute;
+      right: 0;
+      left: 0;
+      bottom: 0;
+      top: 0;
+      z-index: -1; }
+    .sect-projects .resp-project-container .resp-project-min .resp-photo-cell {
+      background-color: #1f3786;
+      box-shadow: 0px 0px 10px 0px #1f3786;
+      height: 11rem;
+      padding: 1rem;
+      transition-duration: 0.5s;
+      width: 100%;
+      margin-bottom: 1.5rem; }
+      .sect-projects .resp-project-container .resp-project-min .resp-photo-cell [class*="rea-"] {
+        background-position: center;
+        background-size: cover;
+        height: 100%;
+        position: relative;
+        width: 100%; }
+      .sect-projects .resp-project-container .resp-project-min .resp-photo-cell .area-photo-1 {
+        background-image: url("../images/design_lab.jpg"); }
+      .sect-projects .resp-project-container .resp-project-min .resp-photo-cell .area-photo-2 {
+        background-image: url("../images/picture_perfect.jpg"); }
+      .sect-projects .resp-project-container .resp-project-min .resp-photo-cell .area-photo-3 {
+        background-image: url("../images/your_life.jpg"); }
+      .sect-projects .resp-project-container .resp-project-min .resp-photo-cell .photo-layer {
+        background-color: rgba(32, 51, 114, 0.692);
+        bottom: 0;
+        left: 0;
+        opacity: 0;
+        position: absolute;
+        right: 0;
+        top: 0;
+        transition-duration: 0.5s; }
+      .sect-projects .resp-project-container .resp-project-min .resp-photo-cell .layer-icon {
+        color: #f2f2ff;
+        font-size: 4rem;
+        opacity: 0;
+        position: absolute;
+        top: calc(50% - 2rem);
+        transition-duration: 0.5s; }
+      .sect-projects .resp-project-container .resp-project-min .resp-photo-cell [class*="code"] {
+        left: 22rem; }
+      .sect-projects .resp-project-container .resp-project-min .resp-photo-cell [class*="sear"] {
+        right: 22rem; }
   .sect-projects .project-container {
     display: flex;
     margin: 0 auto 0 0;
@@ -460,13 +518,49 @@ header {
     top: -3.5rem;
     padding: 1.5rem 30px; }
 
+  .sect-technologies .title-technologies {
+    background-color: #101f55;
+    color: white;
+    display: inline-block;
+    font-size: 2rem;
+    padding: 2rem 30px;
+    position: absolute;
+    top: -3.5rem;
+    padding: 1.5rem 30px; }
   .sect-technologies .technologies-background-area {
     padding: 2rem; }
+  .sect-technologies .line {
+    margin: 1.3rem 0 1rem 0; }
   .sect-technologies .media-padding {
     padding: 0; }
   .sect-technologies [class*="ech-"] {
-    width: 4.5rem;
-    margin-right: 1rem; } }
+    width: 20%;
+    margin-right: 1rem; }
+
+  .sect-projects {
+    padding: 4rem 0 8rem 0;
+    position: relative; }
+    .sect-projects .title-projects {
+      background-color: #101f55;
+      color: white;
+      display: inline-block;
+      font-size: 2rem;
+      padding: 2rem 30px;
+      position: absolute;
+      top: -3.5rem;
+      padding: 1.5rem 30px; }
+    .sect-projects .header-of-projects {
+      border-bottom: 3px solid #101f55;
+      display: inline-block;
+      line-height: 3.5rem;
+      margin: 0;
+      margin-bottom: 3rem; }
+    .sect-projects .header-used-technologies {
+      margin: 0 0 0.5rem 0; }
+    .sect-projects .project-container {
+      display: none; }
+    .sect-projects .resp-project-container {
+      display: block; } }
 @media (min-width: 576px) and (max-width: 767.98px) {
   #btnCircleUp-js i {
     font-size: 3rem; }
