--- a/sass/style.scss
+++ b/sass/style.scss
@@ -400,6 +400,77 @@ header {
     .header-used-technologies {
         margin: 0 0 0.5rem 0;
     }
+    .resp-project-container {
+        padding-top: 3rem;
+        padding-bottom: 3rem;
+        background-image: url("../images/office.jpeg");
+        position: relative;
+        display: none;
+        background-position: center;
+        background-size: cover;
+        background-attachment: fixed;
+        z-index: 0;
+        .resp-project-layer {
+            background-color: rgba(255, 255, 255, 0.521);
+            position: absolute;
+            right: 0;
+            left: 0;
+            bottom: 0;
+            top: 0;
+            z-index: -1
+        }
+        .resp-project-min {
+            .resp-photo-cell {
+                background-color: $projectsMainColor;
+                box-shadow: 0px 0px 10px 0px $projectsMainColor;
+                height: 11rem;
+                padding: 1rem;
+                transition-duration: 0.5s;
+                width: 100%;
+                margin-bottom: 1.5rem;
+                [class*="rea-"] {
+                    background-position: center;
+                    background-size: cover;
+                    height: 100%;
+                    position: relative;
+                    width: 100%;
+                }
+                .area-photo-1 {
+                    background-image: url("../images/design_lab.jpg");
+                }
+                .area-photo-2 {
+                    background-image: url("../images/picture_perfect.jpg");
+                }
+                .area-photo-3 {
+                    background-image: url("../images/your_life.jpg");
+                }
+                .photo-layer {
+                    background-color: $projectsPhotoLayerColor;
+                    bottom: 0;
+                    left: 0;
+                    opacity: 0;
+                    position: absolute;
+                    right: 0;
+                    top: 0;
+                    transition-duration: 0.5s;
+                }
+                .layer-icon {
+                    color: $projectsLayerIconColor;
+                    font-size: 4rem;
+                    opacity: 0;
+                    position: absolute;
+                    top: calc(50% - 2rem);
+                    transition-duration: 0.5s;
+                }
+                [class*="code"] {
+                    left: 22rem;
+                }
+                [class*="sear"] {
+                    right: 22rem;
+                }
+            }
+        }
+    }
     .project-container {
         display: flex;
         margin: 0 auto 0 0;
@@ -670,16 +741,46 @@ header {
     }
 
     .sect-technologies {
+        .title-technologies {
+            @include titleOfSection(-3.5rem);
+            padding: 1.5rem 30px;
+        }
         .technologies-background-area {
             padding: 2rem;
-            
+        }
+        .line {
+            margin: 1.3rem 0 1rem 0;
         }
         .media-padding {
             padding: 0;
         }
         [class*="ech-"] {
-            width: 4.5rem;
+            width: 20%;
             margin-right: 1rem;
+        }
+    }
+
+    .sect-projects {
+        @include sections(4rem,
+        0,
+        8rem,
+        0);
+        .title-projects {
+            @include titleOfSection(-3.5rem);
+            padding: 1.5rem 30px;
+        }
+        .header-of-projects {
+            @include headerOfSection();
+            margin-bottom: 3rem;
+        }
+        .header-used-technologies {
+            margin: 0 0 0.5rem 0;
+        }
+        .project-container {
+            display: none;
+        }
+        .resp-project-container {
+            display: block;
         }
     }
 }
@@ -707,6 +808,7 @@ header {
             padding: 1.5rem 30px;
         }
     }
+    
 }
 
 // Medium devices (tablets, 768px and up)
